fixed font size on technologies on mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -178,10 +178,10 @@ img.tech-img {
   }
 
   .tabs .tab a {
-    font-size: 0.9rem !important;
+    font-size: 0.8rem !important;
   }
   h5.tech-title {
-    font-size: 0.8rem !important;
+    font-size: 0.7rem !important;
   }
   img.tech-img {
     width: 35px !important;
